--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ src/classes/__pycache__/imu.cpython-310.pyc
 src/classes/__pycache__/madgwickahrs.cpython-310.pyc
 
 src/classes/__pycache__/quaternion.cpython-310.pyc
+
+src/classes/__pycache__/arduino_reader.cpython-39.pyc
+
+src/classes/__pycache__/imu_decoder.cpython-39.pyc
