--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ src/classes/__pycache__/arduino_reader.cpython-39.pyc
 src/classes/__pycache__/imu_decoder.cpython-39.pyc
 
 src/classes/__pycache__/
+
+.vscode/
